Fixed bug on mobile on articles list page

--- a/src/assets/scss/pages/_articles.scss
+++ b/src/assets/scss/pages/_articles.scss
@@ -92,6 +92,7 @@
 
     .view-container {
       width: 98%;
+      height: 100%;
       padding: .4em;
     }
 
